--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -19,5 +19,11 @@
     "preserveConstEnums": true,
     "suppressImplicitAnyIndexErrors": true
   },
-  "exclude": ["node_modules", "src/**/__tests__", "playground", "_playground", "src/**/_benchmark*"]
+  "exclude": [
+    "node_modules",
+    "src/**/__tests__",
+    "playground",
+    "_playground",
+    "src/**/_benchmark*"
+  ]
 }
